--- a/index.html
+++ b/index.html
@@ -35,141 +35,164 @@
 <body class="boxAlignment ">
     <header>
         <nav>
-            <div class="navWrapper">
-                <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/game.svg"> Minecraft</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Settings</a>
-            </div>
+            <menu class="navWrapper">
+                <li>
+                    <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Home</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Contact</a>
+                </li>
+                <li>
+                    <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                </li>
+            </menu>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">
+                <button onclick="toggleMenu()" type="button" class="navButton">
                     <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
             </div>
-            <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/game.svg"> Minecraft</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Settings</a>
-            </div>
+            <menu class="mobileMenu" id="mobileMenuID">
+                <li>
+                    <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Home</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/game.svg"> Minecraft</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Contact</a>
+                </li>
+                <li>
+                    <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                </li>
+            </menu>
         </nav>
     </header>
     <main>
-        <div class="containerCenterer">
-            <div class="constructionBox">
-                <div>
-                    <h1>Home</h1>
-                    <div>
-                        <div class="centererWrapper">
-                            <div class="titleUnderText">
-                                <p class="subTitle">Hi there! Welcome to my website! I use this website mainly to show
-                                    recruiters my skills
-                                    and contact information.I hope you'll enjoy your stay here. I'd give you some
-                                    cookies but I respect your privacy, so maybe another time?</p>
-                            </div>
-                            <p class="subTitleExp">About me</p>
-                            <div class="project">
-                                <p class="projectName">Adnan Bukvic, also known as @actuallyaridan</p>
-                                <p class="projectDesc">I'm a creative guy that loves making new solutions to old
-                                    things. I love learning new things and I've liked computers, phones and
-                                    networking ever since I was a child. I'm always up-to-date about their software
-                                    and hardware. I even like modifying electronics to do new things, like old
-                                    cables and accessories like iPods and I know a bunch of languages too!</p>
-                                <div class="projectStuff">
-                                    <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/clock.svg"><br>19 years old</p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span>
-                                        Swedish, English
-                                        <span class="langProf"><br>speaks:</span> Bosnian, Croatian, Serbian
-                                    </p>
+        <h1>Home</h1>
+        <div>
+            <div class="centererWrapper">
+                <section class="titleUnderText">
+                    <p class="subTitle">Hi there! Welcome to my website! I use this website mainly to show
+                        recruiters my skills
+                        and contact information.I hope you'll enjoy your stay here. I'd give you some
+                        cookies but I respect your privacy, so maybe another time?</p>
+                </section>
+                <p class="subTitleExp">About me</p>
+                <section class="project" id="bio">
+                    <p class="projectName">Adnan Bukvic, also known as @actuallyaridan</p>
+                    <p class="projectDesc">I'm a creative guy that loves making new solutions to old
+                        things. I love learning new things and I've liked computers, phones and
+                        networking ever since I was a child. I'm always up-to-date about their software
+                        and hardware. I even like modifying electronics to do new things, like old
+                        cables and accessories like iPods and I know a bunch of languages too!</p>
+                    <div class="projectStuff">
+                        <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/clock.svg"><br>19 years old</p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span>
+                            Swedish, English
+                            <span class="langProf"><br>speaks:</span> Bosnian, Croatian, Serbian
+                        </p>
+                    </div>
+                </section>
+                <section class="project" id="tech">
+                    <p class="projectName">Technology</p>
+                    <p class="projectDesc">I own a bunch of different tech. Here are my most important ones:</p>
+                    <div class="projectStuff">
+                        <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/phone.svg"><br><span class="langProf">Phone:<br></span>iPhone 15
+                            Pro</p>
+                        <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>MacBook
+                            Air<br>(13", 2020, <br>M1, 8GB/256GB)</p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/computer.svg"><br><span class="langProf">Computer:<br></span>
+                            AMD Ryzen 5 3600<br>ASUS Radeon RX6700 XT OC Edition <br>16GB RAM<br>Windows 11, macOS
+                            Sonoma
+                        </p>
+                    </div>
+                </section>
+                <section class="project" id="currentdiscord">
+                    <span id="dcNameContainer">
+                        <p class="projectName" id="dcActivityHeaderName">Discord activity</p>
+                        <p id="statusWrapper" class="dcloading">Loading</p>
+                    </span>
+                    <div id="landyardDiscord">
+                        <div id="loading">
+                            <div>
+                                <div id="loadingSpinner" class="lds-ring">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
                                 </div>
                             </div>
-                            <div class="project">
-                                <p class="projectName">Technology</p>
-                                <p class="projectDesc">I own a bunch of different tech. Here are my most important ones:</p>
-                                <div class="projectStuff">
-                                    <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/phone.svg"><br><span class="langProf">Phone:<br></span>iPhone 15 Pro</p>
-                                            <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/laptop.svg"><br><span class="langProf">Laptop:<br></span>MacBook Air<br>(13", 2020, <br>M1, 8GB/256GB)</p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/computer.svg"><br><span class="langProf">Computer:<br></span>
-                                        AMD Ryzen 5  3600<br>ASUS Radeon RX6700 XT OC Edition <br>16GB RAM<br>Windows 11, macOS Sonoma
-                                    </p>
+                            <p id="errorMessage">An error occurred.<br>Please try again later.</p>
+                        </div>
+                        <div id="loadedLandyard">
+                            <div id="discord">
+                                <div id="discordInfo" class="discordInfo">
+                                    <p id="discordName">actuallyaridan</p>
+                                    <img id="discordPFP" class="discordPFP" draggable="false" width="128px"
+                                        height="128px" alt="">
                                 </div>
-                            </div>
-                            <div class="project">
-                                <span>
-                                    <div id="dcNameContainer">
-                                        <p class="projectName" id="dcActivityHeaderName">Discord activity</p>
-                                        <p id="statusWrapper" class="dcloading">Loading</p>
+                                <hr width="100%" class="divider">
+                                <div id="discordActivity">
+                                    <div id="discordActivityImages">
+                                        <img id="activityLogoLarge" draggable="false" width="96px" height="96px" alt=""
+                                            src="">
+                                        <img id="activityLogoSmall" draggable="false" width="32px" height="32px" alt=""
+                                            src="">
                                     </div>
-                                </span>
-                                <div id="landyardDiscord">
-                                    <div id="loading">
-                                        <div>
-                                            <div id="loadingSpinner" class="lds-ring">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                        </div>
-                                        <p id="errorMessage">An error occurred.<br>Please try again later.</p>
+                                    <div id="discordActivityInfo">
+                                        <h3 id="activityName"></h3>
+                                        <p id="activityDetails"></p>
+                                        <p id="activityState" class="subTitle"></p>
+                                        <p id="activityTime" class="subTitle"></p>
                                     </div>
-                                     <div id="loadedLandyard">
-                                        <div id="discord">
-                                            <div id="discordInfo" class="discordInfo">
-                                                <p id="discordName">actuallyaridan</p>
-                                                <img id="discordPFP" class="discordPFP" draggable="false" width="128px" height="128px" alt="">
-                                            </div>
-                                            <hr width="100%" class="divider">
-                                            <div id="discordActivity">
-                                                <div id="discordActivityImages">
-                                                    <img id="activityLogoLarge" draggable="false" width="96px" height="96px" alt="">
-                                                    <img id="activityLogoSmall" draggable="false" width="32px" height="32px" alt="">
-                                                </div>
-                                                <div id="discordActivityInfo">
-                                                    <h3 id="activityName"></h3>
-                                                    <p id="activityDetails"></p>
-                                                    <p id="activityState" class="subTitle"></p>
-                                                    <p id="activityTime" class="subTitle"></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div> 
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
     </main>
-    <footer>
-        <div class="footer">
-            <p>Any copyrighted material (as in album art, application icons or similar) displayed on this website is owned by their respective copyright holder.  <br>No images are stored directly on this website. No copyright infringement is intended. <br>Contact adnan@aridan.net for takedowns of copyrighted material.</p>
-            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
-        </div>
+    <footer class="footer">
+        <p>Any copyrighted material (as in album art, application icons or similar) displayed on this website is
+            owned by their respective copyright holder. <br>No images are stored directly on this website. No
+            copyright infringement is intended. <br>Contact adnan@aridan.net for takedowns of copyrighted material.
+        </p>
+        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+        <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
 
