--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -24,109 +24,124 @@
 <body class="boxAlignment ">
     <header>
         <nav>
-            <div class="navWrapper">
-                <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="navWrapper">
+                <li>
+                    <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
+                <button onclick="toggleMenu()" type="button" class="navButton">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                    Menu
+                </button>
             </div>
-            <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="mobileMenu" id="mobileMenuID">
+                <li>
+                    <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
         </nav>
     </header>
     <main>
-        <div class="containerCenterer">
-            <div class="constructionBox">
-                <div>
-                    <h1>Erfarenhet</h1>
-                    <div>
-                        <div class="centererWrapper">
-                            <div class="titleUnderText">
-                                <p class="subTitle">Jag är ganska tidigt in i min karriär, men jag har alltid haft ett
-                                    glödande eld för datorer, nätverk och hemsidor så långt jag kan minnas.
-                                    När jag var ett litet barn var jag alltid nyfiken på hur datorer kunde göra och veta
-                                    så mycket när de var så små.
-                                    Därmed kan jag mycket om IT trots min ålder, och jag vet att jag kan imponera med
-                                    min kunskap.</p>
-                            </div>
-                            <div class="centerer">
-                                <div class="centererItems">
-                                    <a href="cv" class="cvButton">Begär CV</a>
-                                    <a rel="noopener" class="socialMedia linkedin"
-                                        href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/"
-                                        target="_blank">LinkedIn</a>
-                                </div>
-                            </div>
-                            <p class="subTitleExp">Arbetslivserfarenhet</p>
-                            <div class="project">
-                                <p class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</p>
-                                <p class="projectDesc">Det här var mitt första jobb. Jag lärde mig mycket under det och
-                                    jag kan ärligt säga att det lärde mig många livsläxor som jag behövde lära mig.
-                                    Jag lärde mig hur man kommunicerar och arbetar som ett team, hur man professionellt
-                                    reparerar teknik och hur man är en bra säljare.
-                                    Det var riktigt spännande att jobba där!</p>
-                                <div class="projectStuff">
-                                    <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/clock.svg"><br>nov 2022 - okt 2023</p>
-                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a rel="noopener" href="https://itcarestore.se"
-                                            target="_blank"><br>itcarestore.se</a></p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/teacher.svg"><br>Webbutveckling <br>Kundbemötande <br>Tekniska reparationer</p>
-                                </div>
-                            </div>
-
-                            <p class="subTitleExp">Utbildning</p>
-                            <div class="project">
-                                <p class="projectName">Dator- och kommunikationsteknikselev på Teknikum </p>
-                                <p class="projectDesc">Under min tid på Teknikum fick jag lära mig grunderna inom
-                                    nätverkande när det gäller routing och switching.
-                                    Jag fick också lära mig att bygga datorer, använda virtuella datorer, hantera
-                                    servrar som körs på Windows Server tillsammans med en
-                                    grundkurs i nätverkssäkerhet, elektronik och webbutveckling!
-                                </p>
-                                <div class="projectStuff">
-                                    <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/clock.svg"><br>agu 2020 - jun 2023</p>
-                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a rel="noopener" href="https://teknikum.se"
-                                            target="_blank"><br>teknikum.se</a></p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/teacher.svg"><br>Nätverk <br>Datorer <br>Webbutveckling<br>
-                                        Elektronik</p>
-                                </div>
-                            </div>
-                        </div>
+        <h1>Erfarenhet</h1>
+        <div>
+            <div class="centererWrapper">
+                <section class="titleUnderText">
+                    <p class="subTitle">Jag är ganska tidigt in i min karriär, men jag har alltid haft ett
+                        glödande eld för datorer, nätverk och hemsidor så långt jag kan minnas.
+                        När jag var ett litet barn var jag alltid nyfiken på hur datorer kunde göra och veta
+                        så mycket när de var så små.
+                        Därmed kan jag mycket om IT trots min ålder, och jag vet att jag kan imponera med
+                        min kunskap.</p>
+                </section>
+                <section class="centerer">
+                    <div class="centererItems">
+                        <a href="cv" class="cvButton">Begär CV</a>
+                        <a rel="noopener" class="socialMedia linkedin"
+                            href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/" target="_blank">LinkedIn</a>
                     </div>
-                </div>
+                </section>
+                <p class="subTitleExp">Arbetslivserfarenhet</p>
+                <section class="project">
+                    <p class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</p>
+                    <p class="projectDesc">Det här var mitt första jobb. Jag lärde mig mycket under det och
+                        jag kan ärligt säga att det lärde mig många livsläxor som jag behövde lära mig.
+                        Jag lärde mig hur man kommunicerar och arbetar som ett team, hur man professionellt
+                        reparerar teknik och hur man är en bra säljare.
+                        Det var riktigt spännande att jobba där!</p>
+                    <div class="projectStuff">
+                        <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/clock.svg"><br>nov 2022 - okt 2023</p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"> <a rel="noopener" href="https://itcarestore.se"
+                                target="_blank"><br>itcarestore.se</a></p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br>Webbutveckling <br>Kundbemötande <br>Tekniska
+                            reparationer</p>
+                    </div>
+                </section>
+
+                <p class="subTitleExp">Utbildning</p>
+                <section class="project">
+                    <p class="projectName">Dator- och kommunikationsteknikselev på Teknikum </p>
+                    <p class="projectDesc">Under min tid på Teknikum fick jag lära mig grunderna inom
+                        nätverkande när det gäller routing och switching.
+                        Jag fick också lära mig att bygga datorer, använda virtuella datorer, hantera
+                        servrar som körs på Windows Server tillsammans med en
+                        grundkurs i nätverkssäkerhet, elektronik och webbutveckling!
+                    </p>
+                    <div class="projectStuff">
+                        <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/clock.svg"><br>agu 2020 - jun 2023</p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"> <a rel="noopener" href="https://teknikum.se"
+                                target="_blank"><br>teknikum.se</a></p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br>Nätverk <br>Datorer <br>Webbutveckling<br>
+                            Elektronik</p>
+                    </div>
+                </section>
             </div>
         </div>
         </div>
     </main>
-    <footer>
-        <div class="footer">
-            <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
-            <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
-        </div>
+    <footer class="footer">
+        <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
+        <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
 </body>
 
