--- a/404.html
+++ b/404.html
@@ -24,26 +24,29 @@
     <header>
         <nav>
             <div class="p404Wrapper">
-                <a class="navButton" href="/"><img draggable="false" class="emoji" alt="" src="/src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
+                        src="/src/images/emojis/house.svg"> Home</a>
             </div>
         </nav>
     </header>
     <main>
-        <div class="containerCenterer">
-            <div class="constructionBox">
-                <div>
-                    <h1>404 / Not Found</h1>
+        <h1>404 / Not Found</h1>
+        <div>
+            <div class="centererWrapper">
+                <section class="titleUnderText">
                     <p class="subTitle">Luckily you didn't break the internet this time!</p>
-                    <p class="subTitle">The page you're looking for cannot be found. If you entered the URL manually, please check the URL and try again, otherwise the page was probably moved or deleted.</p>
-                </div>
+                    <p class="subTitle">The page you're looking for cannot be found. If you entered the URL manually, please check
+                        the URL and try again, otherwise the page was probably moved or deleted.</p>
+                </section>
             </div>
         </div>
-    </main>
-    <footer>
-        <div class="footer">
-            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+
+
         </div>
+    </main>
+    <footer class="footer">
+        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+        <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
 
