--- a/contact.html
+++ b/contact.html
@@ -25,109 +25,120 @@
 <body class="boxAlignment ">
     <header>
         <nav>
-            <div class="navWrapper">
-                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projects</a>
-                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+            <menu class="navWrapper">
+                <li>
+                    <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Home</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/game.svg"> Minecraft</a>
-                <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Settings</a>
-            </div>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Contact</a>
+                </li>
+                <li>
+                    <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                </li>
+            </menu>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">
+                <button onclick="toggleMenu()" type="button" class="navButton">
                     <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
             </div>
-            <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projects</a>
-                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+            <menu class="mobileMenu" id="mobileMenuID">
+                <li>
+                    <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Home</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/game.svg"> Minecraft</a>
-                <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Settings</a>
-            </div>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Contact</a>
+                </li>
+                <li>
+                    <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                </li>
+            </menu>
         </nav>
     </header>
     <main>
-        <div class="containerCenterer">
-            <div class="constructionBox">
-                <div>
-                    <h1>Contact</h1>
-                    <div id="emailModal" class="emailModal">
-                        <div class="emailModalContent">
-                            <div class="titleEmailWrapper">
-                                <p class="titleEmail">Email</p>
-                            </div>
-                            <p class="emailText">If you have an email client installed on your device, you can click on
-                                the "Send an email" button. If you don't, simply send an email to this address:</p>
-                            <p class="emailModalText">adnan@aridan.net</p>
-                            <div class="buttonsEmail">
-                                <a class="socialMedia email" href="mailto:adnan@aridan.net">Send an email</a>
-                                <button onclick="emailToggle()" class="socialMedia emailOK">Close</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email
-                            or an iMessage!I'll be more than happy to reply and I'm looking forward to speaking with
-                            you!</p>
-                        <div class="contactMe">
-                            <div class="socialMedias">
-                                <div>
-                                    <button onclick="emailToggle()" class="socialMedia email">Show email
-                                        address</button>
-                                </div>
-                                <div>
-                                    <a class="socialMedia imessage" href="sms:adnan@aridan.net">Send an iMessage</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <div>
-                        <p class="subTitle">Looking to communicate in a more casual manner? I'm on a bunch of social
-                            media platforms too! Any account on any platform that isn't linked here is not me.</p>
-                        <div class="socialMedias">
-                            <div>
-                                <a rel="noopener" target="_blank" class="socialMedia instagram"
-                                    href="https://www.instagram.com/actuallyaridan/">Instagram</a>
-                            </div>
-                            <div>
-                                <a rel="noopener" class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan" target="_blank">Apple Music</a>
-                            </div>
-                            <div>
-                                <a rel="noopener" class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X (formerly
-                                    Twitter)</a>
-                            </div>
-                            <div>
-                                <a rel="noopener" class="socialMedia threads" href="https://www.threads.net/@actuallyaridan" target="_blank">Threads
-                                    (an
-                                    Instagram app)</a>
-                            </div>
-                        </div>
-                    </div>
+        <h1>Contact</h1>
+        <div id="emailModal" class="emailModal">
+            <div class="emailModalContent">
+                <div class="titleEmailWrapper">
+                    <p class="titleEmail">Email</p>
+                </div>
+                <p class="emailText">If you have an email client installed on your device, you can click on
+                    the "Send an email" button. If you don't, simply send an email to this address:</p>
+                <p class="emailModalText">adnan@aridan.net</p>
+                <div class="buttonsEmail">
+                    <a class="socialMedia email" href="mailto:adnan@aridan.net">Send an email</a>
+                    <button type="button" onclick="emailToggle()" class="socialMedia emailOK">Close</button>
                 </div>
             </div>
         </div>
-    </main>
-    <footer>
-        <div class="footer">
-            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+        <div>
+            <div class="centererWrapper">
+                <section class="titleUnderText">
+                    <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email
+                        or an iMessage!I'll be more than happy to reply and I'm looking forward to speaking with
+                        you!</p>
+                </section>
+                <section class="socialMedias project">
+                    <button onclick="emailToggle()" type="button" class="socialMedia email">Show email
+                        address</button>
+
+                    <a class="socialMedia imessage" href="sms:adnan@aridan.net">Send an iMessage</a>
+                </section>
+                <section>
+                    <p class="subTitle">Looking to communicate in a more casual manner? I'm on a bunch of social
+                        media platforms too! Any account on any platform that isn't linked here is not me.</p>
+                </section>
+                <section class="socialMedias project">
+                    <a rel="noopener" target="_blank" class="socialMedia instagram"
+                        href="https://www.instagram.com/actuallyaridan/">Instagram</a>
+
+                    <a rel="noopener" class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan"
+                        target="_blank">Apple Music</a>
+                    <a rel="noopener" class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X
+                        (formerly
+                        Twitter)</a>
+
+                    <a rel="noopener" class="socialMedia threads" href="https://www.threads.net/@actuallyaridan"
+                        target="_blank">Threads
+                        (an
+                        Instagram app)</a>
+                </section>
+            </div>
         </div>
+    </main>
+    <footer class="footer">
+        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+        <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
 
