--- a/projects.html
+++ b/projects.html
@@ -24,124 +24,143 @@
 <body class="boxAlignment ">
     <header>
         <nav>
-            <div class="navWrapper">
-                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projects</a>
-                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+            <menu class="navWrapper">
+                <li>
+                    <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Home</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/game.svg"> Minecraft</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Settings</a>
-            </div>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Contact</a>
+                </li>
+                <li>
+                    <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                </li>
+            </menu>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">
+                <button onclick="toggleMenu()" type="button" class="navButton">
                     <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
             </div>
-            <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projects</a>
-                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+            <menu class="mobileMenu" id="mobileMenuID">
+                <li>
+                    <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Home</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/game.svg"> Minecraft</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Settings</a>
-            </div>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Contact</a>
+                </li>
+                <li>
+                    <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                </li>
+            </menu>
         </nav>
     </header>
     <main>
-        <div class="containerCenterer">
-            <div class="constructionBox">
-                <div>
-                    <h1>Projects</h1>
+        <h1>Projects</h1>
+        <div>
+            <div class="centererWrapper">
+                <section class="titleUnderText">
+                    <p class="subTitle">I have a bunch of projects that I work on now and then. Some of them
+                        are technical projects and some others have to do with software and/or websites. Why
+                        don't you check them out? I'm sure you'll like them! I had fun making them at least!
+                        <img draggable="false" class="emoji" alt="" src="/src/images/emojis/happy.svg">
+                    </p>
+                </section>
+                <section class="project">
+                    <p class="projectName">This website (aridan.net)</p>
+                    <p class="projectDesc">This is a website that has all my social media links, all my
+                        experiences and similar listed. I learned a lot during this project, mainly how
+                        to make websites look nice.</p>
                     <div>
-                        <div>
-                            <div class="centererWrapper">
-                                <div class="titleUnderText">
-                                    <p class="subTitle">I have a bunch of projects that I work on now and then. Some of them
-                                        are technical projects and some others have to do with software and/or websites. Why
-                                        don't you check them out? I'm sure you'll like them! I had fun making them at least!
-                                        <img draggable="false" class="emoji" alt="" src="/src/images/emojis/happy.svg"></p>
-                                </div>
-                                <div class="project">
-                                    <p class="projectName">This website (aridan.net)</p>
-                                    <p class="projectDesc">This is a website that has all my social media links, all my
-                                        experiences and similar listed. I learned a lot during this project, mainly how
-                                        to make websites look nice.</p>
-                                    <div>
-                                        <p class="projectStatus WIP">Work in progress</p>
-                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
-                                                href="https://aridan.net" target="_blank">aridan.net</a></p>
-                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
-                                                href="https://github.com/actuallyaridan/aridan.net" target="_blank">GitHub</a></p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg"><br> HTML, CSS, JavaScript</p>
-                                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/judge.svg"><br> MIT license</p>
-                                    </div>
-                                </div>
-                                <div class="project">
-                                    <p class="projectName">Swedish translation of OldTwitter</p>
-                                    <p class="projectDesc">OldTwitter is a Firefox and Chrome extension to make X (formerly Twitter) look and feel like Twitter from 2015/2018. I actively translate the extension to Swedish, and I believe I'm doing a pretty decent job! You should check it out!</p>
-                                    <div>
-                                        <p class="projectStatus WIP">Work in progress</p>
-                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
-                                                href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv" target="_blank">GitHub</a></p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg"><br> i8n technology</p>
-                                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/judge.svg"><br> Owned by <a rel="noopener"
-                                                href="https://dimden.dev" target="_blank">dimden</a></p>
-                                    </div>
-                                </div>
-                                <div class="project">
-                                    <p class="projectName">Various iPods</p>
-                                    <p class="projectDesc">I have modified numerous iPods. Some even with transparent click wheels and
-                                        buttons along with transparent faceplates. I've also installed a larger batteries
-                                        and replaced their hard drives with microSD cards.</p>
-                                    <div>
-                                        <p class="projectStatus completed">Completed</p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg"><br> Electronics modification</p>
-                                    </div>
-                                </div>
-                                <div class="project">
-                                    <p class="projectName">Hackintoshing a PC</p>
-                                    <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple
-                                        hardware. I did this as a hobby project and I learned a lot about Apple
-                                        software. It was a fun project and it still works to this day!</p>
-                                    <div>
-                                        <p class="projectStatus completed">Completed</p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg"><br> Software</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <p class="projectStatus WIP">Work in progress</p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"><br> <a rel="noopener" href="https://aridan.net"
+                                target="_blank">aridan.net</a></p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
+                                href="https://github.com/actuallyaridan/aridan.net" target="_blank">GitHub</a></p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br> HTML, CSS, JavaScript</p>
+                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br> MIT license</p>
                     </div>
-                </div>
+                </section>
+                <section class="project">
+                    <p class="projectName">Swedish translation of OldTwitter</p>
+                    <p class="projectDesc">OldTwitter is a Firefox and Chrome extension to make X (formerly Twitter)
+                        look and feel like Twitter from 2015/2018. I actively translate the extension to Swedish,
+                        and I believe I'm doing a pretty decent job! You should check it out!</p>
+                    <div>
+                        <p class="projectStatus WIP">Work in progress</p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"><br> <a rel="noopener"
+                                href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
+                                target="_blank">GitHub</a></p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br> i8n technology</p>
+                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br> Owned by <a rel="noopener"
+                                href="https://dimden.dev" target="_blank">dimden</a></p>
+                    </div>
+                </section>
+                <section class="project">
+                    <p class="projectName">Various iPods</p>
+                    <p class="projectDesc">I have modified numerous iPods. Some even with transparent click wheels
+                        and
+                        buttons along with transparent faceplates. I've also installed a larger batteries
+                        and replaced their hard drives with microSD cards.</p>
+                    <div>
+                        <p class="projectStatus completed">Completed</p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br> Electronics modification</p>
+                    </div>
+                </section>
+                <section class="project">
+                    <p class="projectName">Hackintoshing a PC</p>
+                    <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple
+                        hardware. I did this as a hobby project and I learned a lot about Apple
+                        software. It was a fun project and it still works to this day!</p>
+                    <div>
+                        <p class="projectStatus completed">Completed</p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br> Software</p>
+                    </div>
+                </section>
             </div>
         </div>
     </main>
-    <footer>
-        <div class="footer">
-            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
-        </div>
+    <footer class="footer">
+        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+        <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
 
