--- a/settings.html
+++ b/settings.html
@@ -22,46 +22,70 @@
 <body class="settings">
     <header>
         <nav>
-            <div class="navWrapper">
-                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projects</a>
-                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+            <menu class="navWrapper">
+                <li>
+                    <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Home</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/game.svg"> Minecraft</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton activeChoice right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Settings</a>
-            </div>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Contact</a>
+                </li>
+                <li>
+                    <a class="navButton right-link activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                </li>
+            </menu>
             <div class="navWrapperMobile">
                 <button onclick="toggleMenu()" type="button" class="navButton">
                     <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
                     Menu
                 </button>
             </div>
-            <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projects</a>
-                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+            <menu class="mobileMenu" id="mobileMenuID">
+                <li>
+                    <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Home</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Experiences</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projects</a>
+                </li>
+                <li>
+                    <a class="navButton" href="minecraft"><img draggable="false" class="emoji" alt=""
                             src="/src/images/emojis/game.svg"> Minecraft</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Contact</a>
-                <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Settings</a>
-            </div>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Contact</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Settings</a>
+                </li>
+            </menu>
         </nav>
     </header>
     <main class="settings">
         <h1>Settings</h1>
         <form id="settings" action="/src/scripts/settings.js">
-            <div class="settingGroup">
+            <section class="settingGroup" id="content">
                 <p>Content that you see</p>
                 <div class="setting">
                     <ul>
@@ -76,8 +100,8 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="settingGroup">
+            </section>
+            <section class="settingGroup" id="appearance">
                 <p>Appearance</p>
                 <div class="setting">
                     <ul>
@@ -109,8 +133,8 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="settingGroup">
+            </section>
+            <section class="settingGroup" id="accessibility">
                 <p>Accessibility</p>
                 <div class="setting">
                     <ul>
@@ -134,8 +158,8 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="saveSettings">
+            </section>
+            <section class="saveSettings">
                 <div class="messages">
                     <div>
                         <div id="failSave" class="savedMessage failed">
@@ -152,14 +176,12 @@
                 <div class="bottomButton">
                     <button class="saveButton" type="submit">Apply</button>
                 </div>
-            </div>
+            </section>
         </form>
     </main>
-    <footer>
-        <div class="footer">
-            <p>Version 1.2c (released 2024-03-27)</p>
-            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
-        </div>
+    <footer class="footer">
+        <p>Version 1.3a (released 2024-04-02)</p>
+        <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+        <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
     </footer>
 </body>
