--- a/sv/contact.html
+++ b/sv/contact.html
@@ -24,98 +24,110 @@
 <body class="boxAlignment ">
     <header>
         <nav>
-            <div class="navWrapper">
-                <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="navWrapper">
+                <li>
+                    <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
+                <button onclick="toggleMenu()" type="button" class="navButton">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                    Menu
+                </button>
             </div>
-            <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="mobileMenu" id="mobileMenuID">
+                <li>
+                    <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
         </nav>
     </header>
     <main>
-        <div class="containerCenterer">
-            <div class="constructionBox">
-                <div>
-                    <h1>Kontakt</h1>
-                    <div id="emailModal" class="emailModal">
-                        <div class="emailModalContent">
-                            <div class="titleEmailWrapper">
-                                <p class="titleEmail">E-post</p>
-                            </div>
-                            <p class="emailText">Om du har en e-post klient installerad på din enhet kan du klicka på
-                                 "Skicka ett mejl" knappen. Annars kan du skicka ditt mejl hit:</p>
-                            <p class="emailModalText">adnan@aridan.net</p>
-                            <div class="buttonsEmail">
-                                <a class="socialMedia email" href="mailto:adnan@aridan.net">Skicka ett mejl</a>
-                                <button onclick="emailToggle()" class="socialMedia emailOK">Stäng</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <p class="subTitle">Vill du prata med mig en-mot-en? Skicka ett e-postmeddelande eller ett iMessage till mig, jag bits inte!Jag svarar mer än gärna och jag ser fram emot att prata med dig!</p>
-                        <div class="contactMe">
-                            <div class="socialMedias">
-                                <div>
-                                    <button onclick="emailToggle()" class="socialMedia email">Visa e-post adress</button>
-                                </div>
-                                <div>
-                                    <a class="socialMedia imessage" href="sms:adnan@aridan.net">Skicka ett iMessage</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <div>
-                        <p class="subTitle">Vill du snacka på ett mindre formellt sätt? Jag är också på en massa sociala medier! Ser du en profil som inte är länkad här så är det inte jag.</p>
-                        <div class="socialMedias">
-                            <div>
-                                <a rel="noopener" class="socialMedia instagram" target="_blank"
-                                    href="https://www.instagram.com/actuallyaridan/">Instagram</a>
-                            </div>
-                            <div>
-                                <a rel="noopener" class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan" target="_blank">Apple Music</a>
-                            </div>
-                            <div>
-                                <a rel="noopener" class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X (tidigare
-                                    Twitter)</a>
-                            </div>
-                            <div>
-                                <a rel="noopener" class="socialMedia threads" href="https://www.threads.net/@actuallyaridan" target="_blank">Threads
-                                    (en
-                                    app från Instagram)</a>
-                            </div>
-                        </div>
-                    </div>
+        <h1>Kontakt</h1>
+        <div id="emailModal" class="emailModal">
+            <div class="emailModalContent">
+                <div class="titleEmailWrapper">
+                    <p class="titleEmail">E-post</p>
+                </div>
+                <p class="emailText">Om du har en e-post klient installerad på din enhet kan du klicka på
+                    "Skicka ett mejl" knappen. Annars kan du skicka ditt mejl hit:</p>
+                <p class="emailModalText">adnan@aridan.net</p>
+                <div class="buttonsEmail">
+                    <a class="socialMedia email" href="mailto:adnan@aridan.net">Skicka ett mejl</a>
+                    <button onclick="emailToggle()" class="socialMedia emailOK">Stäng</button>
                 </div>
             </div>
         </div>
-    </main>
-    <footer>
-        <div class="footer">
-            <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
-            <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
+        <div>
+            <div class="centererWrapper">
+                <section class="titleUnderText">
+                    <p class="subTitle">Vill du prata med mig en-mot-en? Skicka ett e-postmeddelande eller ett iMessage
+                        till
+                        mig, jag bits inte! Jag svarar mer än gärna och jag ser fram emot att prata med dig!</p>
+                </section>
+                <section class="socialMedias project">
+                    <button type="button" onclick="emailToggle()" class="socialMedia email">Visa e-post adress</button>
+                    <a class="socialMedia imessage" href="sms:adnan@aridan.net">Skicka ett iMessage</a>
+                </section>
+                <section>
+                    <p class="subTitle">Vill du snacka på ett mindre formellt sätt? Jag är också på en massa sociala
+                        medier! Ser
+                        du en profil som inte är länkad här så är det inte jag.</p>
+                </section>
+                <section class="socialMedias project">
+                    <a rel="noopener" class="socialMedia instagram" target="_blank"
+                        href="https://www.instagram.com/actuallyaridan/">Instagram</a>
+
+                    <a rel="noopener" class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan"
+                        target="_blank">Apple Music</a>
+                    <a rel="noopener" class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X
+                        (tidigare
+                        Twitter)</a>
+                    <a rel="noopener" class="socialMedia threads" href="https://www.threads.net/@actuallyaridan"
+                        target="_blank">Threads
+                        (en
+                        app från Instagram)</a>
+                </section>
+            </div>
         </div>
+    </main>
+    <footer class="footer">
+        <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
+        <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
 </body>
 
