--- a/sv/index.html
+++ b/sv/index.html
@@ -25,122 +25,140 @@
 <body class="boxAlignment">
     <header>
         <nav>
-            <div class="navWrapper">
-                <a class="navButton activeChoice" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="navWrapper">
+                <li>
+                    <a class="navButton activeChoice" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
+                <button onclick="toggleMenu()" type="button" class="navButton">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                    Menu
+                </button>
             </div>
-            <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton activeChoice" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="mobileMenu" id="mobileMenuID">
+                <li>
+                    <a class="navButton activeChoice" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
         </nav>
     </header>
     <main>
-        <div class="containerCenterer">
-            <div class="constructionBox">
-                <div>
-                    <h1>Hem</h1>
-                    <div>
-                        <div class="centererWrapper">
-                            <div class="titleUnderText">
-                                <p class="subTitle">Hallå där! Välkommen till min webbsida! Jag använder denna webbsida mestadels för att
-                                    visa rekryterare mina kompetenser och min kontaktinformation.Jag hoppas att du
-                                    kommer att trivas här. Jag skulle ge dig några cookies (kakor) men jag respekterar
-                                    din integritet, så kanske en annan gång?</p>
-                            </div>
-                            <p class="subTitleExp">Om mig
-                            </p>
-                            <div class="project">
-                                <p class="projectName">Adnan Bukvic, även känd som @actuallyaridan</p>
-                                <p class="projectDesc">Jag är en kreativ kille som älskar att skapa nya lösningar för
-                                    gamla saker. Jag älskar att lära mig nya saker och jag har gillat datorer, telefoner
-                                    och nätverk ända sedan jag var ett barn.Jag är alltid uppdaterad om deras mjukvara
-                                    och hårdvara. Jag gillar till och med att modifiera elektronik för att göra nya
-                                    saker, som gamla kablar
-                                    och tillbehör som iPods och jag kan en massa språk också!</p>
-                                <div class="projectStuff">
-                                    <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/clock.svg"><br>19 år gammal</p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/globe.svg"><span class="langProf"><br>flytande:</span>
-                                        svenska, engelska
-                                        <span class="langProf"><br>pratar:</span> bosniska, kroatiska, serbiska
-                                    </p>
+        <h1>Hem</h1>
+        <div>
+            <div class="centererWrapper">
+                <section class="titleUnderText">
+                    <p class="subTitle">Hallå där! Välkommen till min webbsida! Jag använder denna webbsida
+                        mestadels för att
+                        visa rekryterare mina kompetenser och min kontaktinformation.Jag hoppas att du
+                        kommer att trivas här. Jag skulle ge dig några cookies (kakor) men jag respekterar
+                        din integritet, så kanske en annan gång?</p>
+                </section>
+                <p class="subTitleExp">Om mig
+                </p>
+                <section class="project">
+                    <p class="projectName">Adnan Bukvic, även känd som @actuallyaridan</p>
+                    <p class="projectDesc">Jag är en kreativ kille som älskar att skapa nya lösningar för
+                        gamla saker. Jag älskar att lära mig nya saker och jag har gillat datorer, telefoner
+                        och nätverk ända sedan jag var ett barn.Jag är alltid uppdaterad om deras mjukvara
+                        och hårdvara. Jag gillar till och med att modifiera elektronik för att göra nya
+                        saker, som gamla kablar
+                        och tillbehör som iPods och jag kan en massa språk också!</p>
+                    <div class="projectStuff">
+                        <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/clock.svg"><br>19 år gammal</p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/globe.svg"><span class="langProf"><br>flytande:</span>
+                            svenska, engelska
+                            <span class="langProf"><br>pratar:</span> bosniska, kroatiska, serbiska
+                        </p>
+                    </div>
+                </section>
+                <section class="project">
+                    <span id="dcNameContainer">
+                        <p class="projectName" id="dcActivityHeaderName">Discord-aktivitet</p>
+                        <p id="statusWrapper" class="dcloading">Laddar</p>
+                    </span>
+                    <div id="landyardDiscord">
+                        <div id="loading">
+                            <div>
+                                <div id="loadingSpinner" class="lds-ring">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
                                 </div>
                             </div>
-                            <div class="project">
-                                <span id="dcNameContainer">
-                                <p class="projectName" id="dcActivityHeaderName">Discord-aktivitet</p>
-                                <p id="statusWrapper" class="dcloading">Laddar</p>
-
-                                </span>
-
-                                <div id="landyardDiscord">
-                                    <div id="loading">
-                                        <div>
-                                            <div id="loadingSpinner" class="lds-ring">
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                                <div></div>
-                                            </div>
-                                        </div>
-                                        <p id="errorMessage">Ett fel uppstod.<br>Försök igen senare.</p>
+                            <p id="errorMessage">Ett fel uppstod.<br>Försök igen senare.</p>
+                        </div>
+                        <div id="loadedLandyard">
+                            <div id="discord">
+                                <div id="discordInfo" class="discordInfo">
+                                    <p id="discordName">actuallyaridan</p>
+                                    <img id="discordPFP" class="discordPFP" draggable="false" width="128px"
+                                        height="128px" alt="">
+                                </div>
+                                <hr width="100%" class="divider">
+                                <div id="discordActivity">
+                                    <div id="discordActivityImages">
+                                        <img id="activityLogoLarge" draggable="false" width="96px" height="96px" alt="">
+                                        <img id="activityLogoSmall" draggable="false" width="32px" height="32px" alt="">
                                     </div>
-                                     <div id="loadedLandyard">
-                                        <div id="discord">
-                                            <div id="discordInfo" class="discordInfo">
-                                                <p id="discordName">actuallyaridan</p>
-                                                <img id="discordPFP" class="discordPFP" draggable="false" width="128px" height="128px" alt="">
-                                            </div>
-                                            <hr width="100%" class="divider">
-                                            <div id="discordActivity">
-                                                <div id="discordActivityImages">
-                                                    <img id="activityLogoLarge" draggable="false" width="96px" height="96px" alt="">
-                                                    <img id="activityLogoSmall" draggable="false" width="32px" height="32px" alt="">
-                                                </div>
-                                                <div id="discordActivityInfo">
-                                                    <h3 id="activityName"></h3>
-                                                    <p id="activityDetails"></p>
-                                                    <p id="activityState" class="subTitle"></p>
-                                                    <p id="activityTime" class="subTitle"></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div> 
+                                    <div id="discordActivityInfo">
+                                        <h3 id="activityName"></h3>
+                                        <p id="activityDetails"></p>
+                                        <p id="activityState" class="subTitle"></p>
+                                        <p id="activityTime" class="subTitle"></p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
     </main>
-    <footer>
-        <div class="footer">
-            <p>Allt upphovsrättsskyddat material (som albumomslag, applikationsikoner och dylikt) som visas på den här sidan ägs av respektive upphovsrättsinnehavare.  <br>Inga bilder lagras direkt på denna webbplats. Intrång i upphovsrätt ej avsedd. <br>Kontakta adnan@aridan.net för att ta ned upphovsrättsskyddat material.</p>
-            <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
-            <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
-        </div>
+    <footer class="footer">
+        <p>Allt upphovsrättsskyddat material (som albumomslag, applikationsikoner och dylikt) som visas på den här
+            sidan ägs av respektive upphovsrättsinnehavare. <br>Inga bilder lagras direkt på denna webbplats.
+            Intrång i upphovsrätt ej avsedd. <br>Kontakta adnan@aridan.net för att ta ned upphovsrättsskyddat
+            material.</p>
+        <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
+        <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
 </body>
 
