--- a/sv/projects.html
+++ b/sv/projects.html
@@ -27,115 +27,144 @@
 <body class="boxAlignment ">
     <header>
         <nav>
-            <div class="navWrapper">
-                <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="navWrapper">
+                <li>
+                    <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton">＝ Meny</button>
+                <button onclick="toggleMenu()" type="button" class="navButton">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                    Menu
+                </button>
             </div>
-            <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="mobileMenu" id="mobileMenuID">
+                <li>
+                    <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
         </nav>
     </header>
     <main>
-        <div class="containerCenterer">
-            <div class="constructionBox">
-                <div>
-                    <h1>Projekt</h1>
+        <h1>Projekt</h1>
+        <div>
+            <div class="centererWrapper">
+                <section class="titleUnderText">
+                    <p class="subTitle">Jag har massor av olika projekt som jag håller på med ibland.
+                        Vissa
+                        av dem är tekniska och andra är mjukvarurelaterade eller webbsidor och liknande.
+                        Ta och
+                        kika på dem! Jag slår vad att du kommer gilla i alla fall en av dem. I vilket
+                        fall så
+                        hade jag kul när jag skapade dem!
+                        <img draggable="false" class="emoji" alt="" src="/src/images/emojis/happy.svg">
+                    </p>
+                </section>
+                <section class="project">
+                    <p class="projectName">Den där webbsidan (aridan.net)</p>
+                    <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton
+                        på sociala medier och liknande samt min arbetslivserfarenhet. Jag lär mig
+                        ständigt nya saker genom denna webbsida, men mestadels hur man kan få webbsidor
+                        se bra ut!</p>
                     <div>
-                        <div>
-                            <div class="centererWrapper">
-                                <div class="titleUnderText">
-                            <p class="subTitle">Jag har massor av olika projekt som jag håller på med ibland. Vissa
-                                av dem är tekniska och andra är mjukvarurelaterade eller webbsidor och liknande. Ta och
-                                kika på dem! Jag slår vad att du kommer gilla i alla fall en av dem. I vilket fall så
-                                hade jag kul när jag skapade dem!
-                                <img draggable="false" class="emoji" alt="" src="/src/images/emojis/happy.svg">
-                            </p>
-                                </div>
-                            <div class="project">
-                                <p class="projectName">Den där webbsidan (aridan.net)</p>
-                                <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton på sociala medier och liknande samt min arbetslivserfarenhet. Jag lär mig ständigt nya saker genom denna webbsida, men mestadels hur man kan få webbsidor se bra ut!</p>
-                                <div>
-                                    <p class="projectStatus WIP">Pågår</p>
-                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a rel="noopener" href="https://aridan.net"
-                                            target="_blank"><br>aridan.net</a></p>
-                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a rel="noopener"
-                                            href="https://github.com/actuallyaridan/aridan.net"
-                                            target="_blank"><br>GitHub</a></p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/teacher.svg"><br>HTML, CSS, JavaScript</p>
-                                    <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/judge.svg"><br>MIT licensen</p>
-                                </div>
-                            </div>
-                            <div class="project">
-                                <p class="projectName">Den svenska översättningen av OldTwitter</p>
-                                <p class="projectDesc">OldTwitter är ett tillägg för Chrome och Firefox som gör så att X (tidigare Twitter) ser ut som Twitter från 2016/2018. Jag behöver aktivt översätta tillägget till svenska och själv tycker jag att jag gör ett ganska bra jobb!</p>
-                                <div>
-                                    <p class="projectStatus WIP">Pågår</p>
-                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/link.svg"> <a rel="noopener"
-                                            href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
-                                            target="_blank"><br>GitHub</a></p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/teacher.svg"><br>Översättnings-teknologi
-                                    </p>
-                                    <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/judge.svg"><br>Ägs av <a rel="noopener" href="https://dimden.dev"
-                                            target="_blank">dimden</a></p>
-                                </div>
-                            </div>
-                            <div class="project">
-                                <p class="projectName">Diverse iPods</p>
-                                <p class="projectDesc">Jag gillar att modifiera äldre iPods. På vissa iPod har jag lagt en genomskinlig framsida samt klickhjul på.Dessutom så byter jag ut batteriet på dem mot en större variant och byter ut hårddiskarna med ett SD kort.</p>
-                                <div>
-                                    <p class="projectStatus completed">Färdigt</p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="/src/images/emojis/teacher.svg"><br>Modifiering av elektronik</p>
-                                </div>
-                            </div>
-                            <div class="project">
-                                <p class="projectName">"Hackintoshing"</p>
-                                <p class="projectDesc">"Hackintoshing" är att installera macOS på icke-Apple hårdvara. Detta gjorde jag som ett hobbyprojekt, men samtidigt så lärde jag lärde mig massor om hur Apples klientoperativsystem fungerar. Det var superkul, och den startar till macOS än idag!</p>
-                                    <div>
-                                        <p class="projectStatus completed">Färdigt</p>
-                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="/src/images/emojis/teacher.svg"><br>Mjukvara</p>
-                                    </div>
-                            </div>
-                        </div>
+                        <p class="projectStatus WIP">Pågår</p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"> <a rel="noopener" href="https://aridan.net"
+                                target="_blank"><br>aridan.net</a></p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"> <a rel="noopener"
+                                href="https://github.com/actuallyaridan/aridan.net" target="_blank"><br>GitHub</a>
+                        </p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br>HTML, CSS, JavaScript</p>
+                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br>MIT licensen</p>
                     </div>
-                </div>
+                </section>
+                <section class="project">
+                    <p class="projectName">Den svenska översättningen av OldTwitter</p>
+                    <p class="projectDesc">OldTwitter är ett tillägg för Chrome och Firefox som gör så
+                        att X (tidigare Twitter) ser ut som Twitter från 2016/2018. Jag behöver aktivt
+                        översätta tillägget till svenska och själv tycker jag att jag gör ett ganska bra
+                        jobb!</p>
+                    <div>
+                        <p class="projectStatus WIP">Pågår</p>
+                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/link.svg"> <a rel="noopener"
+                                href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
+                                target="_blank"><br>GitHub</a></p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br>Översättnings-teknologi
+                        </p>
+                        <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/judge.svg"><br>Ägs av <a rel="noopener"
+                                href="https://dimden.dev" target="_blank">dimden</a></p>
+                    </div>
+                </section>
+                <section class="project">
+                    <p class="projectName">Diverse iPods</p>
+                    <p class="projectDesc">Jag gillar att modifiera äldre iPods. På vissa iPod har jag
+                        lagt en genomskinlig framsida samt klickhjul på.Dessutom så byter jag ut
+                        batteriet på dem mot en större variant och byter ut hårddiskarna med ett SD
+                        kort.</p>
+                    <div>
+                        <p class="projectStatus completed">Färdigt</p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br>Modifiering av elektronik</p>
+                    </div>
+                </section>
+                <section class="project">
+                    <p class="projectName">"Hackintoshing"</p>
+                    <p class="projectDesc">"Hackintoshing" är att installera macOS på icke-Apple
+                        hårdvara. Detta gjorde jag som ett hobbyprojekt, men samtidigt så lärde jag
+                        lärde mig massor om hur Apples klientoperativsystem fungerar. Det var superkul,
+                        och den startar till macOS än idag!</p>
+                    <div>
+                        <p class="projectStatus completed">Färdigt</p>
+                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                src="/src/images/emojis/teacher.svg"><br>Mjukvara</p>
+                    </div>
+                </section>
             </div>
         </div>
     </main>
-    <footer>
-        <div class="footer">
-            <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
-            <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
-        </div>
+    <footer class="footer">
+        <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
+        <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
     </footer>
 </body>
 
