--- a/sv/settings.html
+++ b/sv/settings.html
@@ -24,39 +24,62 @@
 <body class=" settings">
     <header>
         <nav>
-            <div class="navWrapper">
-                <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton activeChoice right-link" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="navWrapper">
+                <li>
+                    <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton right-link activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" type="button" class="navButton">＝ Meny</button>
+                <button onclick="toggleMenu()" type="button" class="navButton">
+                    <img draggable="false" class="emoji" alt="" src="/src/images/icons/menu.svg">
+                    Menu
+                </button>
             </div>
-            <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/house.svg"> Hem</a>
-                <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/brain.svg"> Erfarenhet</a>
-                <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/tools.svg"> Projekt</a>
-                <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/speak.svg"> Kontakt</a>
-                <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
-                        src="/src/images/emojis/setttings.svg"> Inställningar</a>
-            </div>
+            <menu class="mobileMenu" id="mobileMenuID">
+                <li>
+                    <a class="navButton" href="/sv/"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/house.svg"> Hem</a>
+                </li>
+                <li>
+                    <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/brain.svg"> Erfarenhet</a>
+                </li>
+                <li>
+                    <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/tools.svg"> Projekt</a>
+                </li>
+                <li>
+                    <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/speak.svg"> Kontakt</a>
+                </li>
+                <li>
+                    <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
+                            src="/src/images/emojis/setttings.svg"> Inställningar</a>
+                </li>
+            </menu>
         </nav>
     </header>
     <main class="settings">
         <h1>Inställningar</h1>
         <form id="settings" action="/src/scripts/settings.js">
-            <div class="settingGroup">
+            <section class="settingGroup">
                 <p>Innehåll du ser</p>
                 <div class="setting">
                     <ul>
@@ -71,8 +94,8 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="settingGroup">
+            </section>
+            <section class="settingGroup">
                 <p>Utseende</p>
                 <div class="setting">
                     <ul>
@@ -104,8 +127,8 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="settingGroup">
+            </section>
+            <section class="settingGroup">
                 <p>Tillgänglighet</p>
                 <div class="setting">
                     <ul>
@@ -129,8 +152,8 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="saveSettings">
+            </section>
+            <section class="saveSettings">
                 <div class="messages">
                     <div>
                         <div id="failSave" class="savedMessage failed">
@@ -147,14 +170,12 @@
                 <div class="bottomButton">
                     <button class="saveButton" type="submit">Verkställ</button>
                 </div>
-            </div>
+            </section>
         </form>
     </main>
-    <footer>
-        <div class="footer">
-            <p>Version 1.2c (släppt 2024-03-27)</p>
+    <footer class="footer">
+            <p>Version 1.3a (släppt 2024-04-02)</p>
             <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
             <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
-        </div>
     </footer>
 </body>
